fixed: various issues when serving forms in a iframe on iOS devices (but making scrolling very slow on iOS)
https://github.com/OpenClinica/enketo-express-oc/issues/116
https://github.com/OpenClinica/enketo-express-oc/issues/160
https://github.com/OpenClinica/enketo-express-oc/issues/154

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -20,7 +20,11 @@ html(manifest=manifest, lang=language, dir=dir(language))
 
   - var cl = (iframe) ? 'iframe' : ''
   body(class=cl)
-    block content
+    if iframe
+      .ios-iframe-bug-wrap
+        block content
+    else 
+      block content
 
     block script
 
