fixed: iframe-friendly views only print first page,
https://github.com/OpenClinica/enketo-express-oc/issues/202

--- a/app/views/styles/component/_print.scss
+++ b/app/views/styles/component/_print.scss
@@ -1,6 +1,11 @@
 @media print {
+
     .vex,
     .vex-overlay {
         display: none;
+    }
+
+    .ios-iframe-bug-wrap {
+        position: static;
     }
 }
