added: albanian translation

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -16,6 +16,8 @@ block content
           li= t("langs.en")
         when "ar"
           li= t("langs.ar")
+        when "sq"
+          li= t("langs.sq")
         when "fr"
           li= t("langs.fr")
         when "es" 
