--- a/app/views/pages/modern-browsers.pug
+++ b/app/views/pages/modern-browsers.pug
@@ -6,9 +6,10 @@ block content
   p= t("page.modernbrowsers.msg1") 
   p= t("page.modernbrowsers.msg2")         
     ul
-      li: a(href="http://www.mozilla.com/",title="Firefox download page") Firefox
-      li: a(href="http://www.google.com/chrome/",title="Chrome download page") Chrome
-      li Edge (built into Windows 10)
-      li: a(href="http://www.opera.com/", title="Opera download page") Opera
-  h2= t("page.modernbrowsers.ie.heading")
-  p= t("page.modernbrowsers.ie.msg")
+      li: a(href="https://www.mozilla.com/",title="Firefox download page") Firefox
+      li: a(href="https://www.google.com/chrome/",title="Chrome download page") Chrome
+      li: a(href="https://www.microsoft.com/edge", title="Edge download page") Edge 
+      li: a(href="https://www.opera.com/", title="Opera download page") Opera
+  // keep translations for now
+  // h2= t("page.modernbrowsers.ie.heading")
+  // p= t("page.modernbrowsers.ie.msg")
