--- a/app/views/surveys/component/_form-footer.pug
+++ b/app/views/surveys/component/_form-footer.pug
@@ -1,32 +1,28 @@
 section.form-footer
   .form-footer__content
-    .form-footer__content__main-controls  
-      if type === 'fs'
-        button#close-form.btn.btn-default #{t('alert.default.button')}
-        button#finish-form.btn.btn-primary
-          i.icon.icon-check= ' '
-          | #{t('formfooter.complete.btn')}
-      else if type === 'preview'
-        button#validate-form.btn.btn-primary
-          i.icon.icon-check= ' '
-          | #{t('formfooter.validate.btn')}
-      else if type === 'view'
-        button#close-form.btn.btn-default.hide #{t('alert.default.button')}
-      else
-        if draftEnabled && offline
-          button#save-draft.btn.btn-default
-            i.icon.icon-info-circle.save-draft-info= ' '
-            i.icon.icon-pencil= ' '
-            | #{t( 'formfooter.savedraft.btn' )}
-        button#submit-form.btn.btn-primary
-          i.icon.icon-check= ' '
-          | #{t('formfooter.submit.btn')}
-      a.btn.btn-primary.next-page(href="#")= t('form.pages.next')
-      include _logout
-      include _enketo-power
-      a.previous-page.disabled(href="#")= t('form.pages.back')
+    if !headless
+      .form-footer__content__main-controls  
+        if type === 'preview'
+          button#validate-form.btn.btn-primary
+            i.icon.icon-check= ' '
+            | #{t('formfooter.validate.btn')}
+        else if type === 'view'
+          button#close-form.btn.btn-default.hide #{t('alert.default.button')}
+        else
+          if draftEnabled && offline
+            button#save-draft.btn.btn-default
+              i.icon.icon-info-circle.save-draft-info= ' '
+              i.icon.icon-pencil= ' '
+              | #{t( 'formfooter.savedraft.btn' )}
+          button#submit-form.btn.btn-primary
+            i.icon.icon-check= ' '
+            | #{t('formfooter.submit.btn')}
+        a.btn.btn-primary.next-page(href="#")= t('form.pages.next')
+        include _logout
+        include _enketo-power
+        a.previous-page.disabled(href="#")= t('form.pages.back')
 
-    .form-footer__content__jump-nav
-      a.btn.btn-default.disabled.first-page(href="#")= t('form.pages.return')
-      a.btn.btn-default.disabled.last-page(href="#")= t('form.pages.end')
+      .form-footer__content__jump-nav
+        a.btn.btn-default.disabled.first-page(href="#")= t('form.pages.return')
+        a.btn.btn-default.disabled.last-page(href="#")= t('form.pages.end')
 
