--- a/app/views/surveys/webform-redirect.pug
+++ b/app/views/surveys/webform-redirect.pug
@@ -14,4 +14,4 @@ block script
     location.href = url.toString();
 
 block content
-  div redirecting...
+  div(style="margin-top: 40vh; text-align: center;") redirecting...
