added: preparation for Georgian translation

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -39,6 +39,8 @@ block content
             li= t("langs.ru")
           when "el"
             li= t("langs.el")
+          when "ka"
+            li= t("langs.ka")
           when "km"
             li= t("langs.km")
           when "th"
