added: experimental support to request from in desktop mode

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -5,7 +5,8 @@ html(lang=language, dir=dir(language))
 
     meta(charset="utf-8")
     meta(name="author", content="Martijn van de Rijdt (Enketo LLC)")
-    meta(name="viewport",content="width=device-width, initial-scale=1.0")
+    if !desktop
+      meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
     link(rel="shortcut icon", href=`${basePath}${offlinePath || ''}/images/favicon.ico`)
     link(rel="icon", type="image/png", sizes="180x180", href=`${basePath}${offlinePath || ''}/images/icon_180x180.png`)
