changed: prepared for Panjabi translation

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -65,6 +65,8 @@ block content
             li= t("langs.zh")
           when "cs"
             li= t("langs.cs")
+          when "pa"
+            li= t("langs.pa")
           when "pl"
             li= t("langs.pl")
           when "nl"
