added: Turkish (partial) translation changed: Hindi, Dutch, and Spanish translations

--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -59,6 +59,8 @@ block content
             li= t("langs.lo")
           when "sk"
             li= t("langs.sk")
+          when "tr"
+            li= t("langs.tr")
           when "pt"
             li= t("langs.pt")
           when "zh"
