--- a/app/views/styles/theme-grid/theme-grid.scss
+++ b/app/views/styles/theme-grid/theme-grid.scss
@@ -265,7 +265,7 @@ $extend: 100%;
 
   a{
   	color: $secondary-green;
-  	text-decoration: none;
+  	text-decoration: underline;
   }
   .form-header__branding{
     img{
