--- a/app/views/styles/theme-grid/theme-grid.scss
+++ b/app/views/styles/theme-grid/theme-grid.scss
@@ -571,3 +571,14 @@ i.icon.icon-minus{
     border-right: 1px solid transparent;
   }
 }
+
+.show-side-slider .side-slider__toggle.close{
+  width: 0px;
+  height: 0px;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 10px solid $body-bg;
+  border-right: 1px solid transparent;
+  left: -15px;
+  outline:none;
+}
