[#213] pathname with a base root url
We need to test if the pathname endWith insteed of === in case of enketo is not on the root path url (e.i. mydomain.com/enketo/x/#abcde)
Fixes #213

--- a/app/views/surveys/webform-redirect.pug
+++ b/app/views/surveys/webform-redirect.pug
@@ -4,8 +4,8 @@ block script
   script.
     const url = new URL(window.location.href);
 
-    if( url.pathname === '/x/' || url.pathname === '/_/' ){
-      url.pathname = `/x/${url.hash.substring(1)}`;
+    if( url.pathname.endsWith('/x/') || url.pathname.endsWith('/_/') ){
+      url.pathname = `${url.pathname.slice(0, -3)}/x/${url.hash.substring(1)}`;
       url.hash = '';
     } else {
       url.pathname = url.pathname.replace('::', '');
