--- a/app/views/surveys/webform.pug
+++ b/app/views/surveys/webform.pug
@@ -37,6 +37,10 @@ block content
       include component/_form-header
       | !{form}
       include component/_form-footer
+    .copyright
+      | Designed by&nbsp;
+      a(href='https://developmentgateway.org/' target='_blank') Development Gateway
+      |  - 2021
   if offlinePath
     include component/_side-slider
   include component/_feedback-bar
