[SQUASH] Do not disable the upload button unless there no finalized records in the queue, closes #43
Show a busy button state consistent with the rest of Enketo instead of the separate progress bar on top.

--- a/app/views/styles/component/_side-slider.scss
+++ b/app/views/styles/component/_side-slider.scss
@@ -30,6 +30,12 @@ $slider-width: 240px;
         right: 15px;
     }
 
+    .btn {
+        progress {
+            margin: 4px;
+        }
+    }
+
     &__button-bar {
         margin: 20px 0 33px 0;
     }
@@ -138,11 +144,6 @@ $slider-width: 240px;
             background: #626262;
             color: white;
         }
-    }
-
-    &__upload-progress {
-        visibility: hidden;
-        width: 100%;
     }
 
     &__records {
